[Autofill] Best effort filling for invalid phone numbers.

At the moment autofill refuses to fill anything if the web site is asking
for a complete phone number but what user has saved is considered as
invalid by libphonenumber.

We should relex this restriction and fill the phone field with exactly what
the user has saved, as long as it's a field expecting complete number.

Phone number components field will still be left empty.

Bug: 793400
Change-Id: Ief7689185dfdf8c29526f620f80f95fed9a6d69c
Reviewed-on: https://chromium-review.googlesource.com/818015
Commit-Queue: Hui Wu <wuandy@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523140}
Former-commit-id: 3b31c058c64fd8a7186b8103316abc120b385aec